# xssbase

./: .gitignore  README.md  pyproject.toml
xssbase/: xssbase.py
xssbase/lib/: encode.py  expose.py  logger.py  payload.py  prompt.py  trigger.py  var.py  webserver.py
